# claude-code-gui

./: LICENSE  README.md  pyproject.toml  pyrightconfig.json
rules/: code-style.md  development.md  features.md  mode-system.md  pyqt6-conventions.md  session-management.md  tool-permissions.md  ui-ux.md
src/claude_code_gui/: __init__.py  history_browser.py  main_window.py  models.py  rules_editor.py  rules_parser.py  sdk_integration.py  session_manager.py  task_dialog.py  workers.py
