[project]
name = "claude-code-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "fish895623", email = "dan990429@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "claude-code-sdk>=0.0.14",
    "pyqt6>=6.9.1",
]

[project.scripts]
claude-code-gui = "claude_code_gui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pydocstyle>=6.3.0",
]
